test/classes/initializers/compilerGenerated/dflt-ctor-generic-uninit-field-const-err-1.good
dflt-ctor-generic-uninit-field-const-err-1.chpl:7: error: unresolved call 'A.init()'
dflt-ctor-generic-uninit-field-const-err-1.chpl:3: note: candidates are: A.init(c)
